# fdi-pln-2602

./: .env.example  .gitignore  README.md  fdi_pln_butler-26.2.23-py3-none-any.whl  pyproject.toml
app/: api_client.py  main.py  negociador.py  test_runner.py
app/pln_bot/agent/: negociador.py  round_executor.py
app/pln_bot/agente/: negociador.py  ronda.py
app/pln_bot/cli/: main.py  test_runner.py
app/pln_bot/core/: config.py
app/pln_bot/interfaz/: main.py
app/pln_bot/negociacion/: constructor_propuestas.py  procesador_buzon.py  utilidades_mensajes.py
app/pln_bot/negotiation/: agreement_tracker.py  mailbox_processor.py  proposal_sender.py
app/pln_bot/services/: analysis.py
app/pln_bot/servicios/: api_client.py  ollama_client.py  servicio_analisis.py
app/state/: Bot_1.json  Bot_2.json
p2/: README.md
p4/: .env.example  README.md  backend.py  conf.py  index.html  parseo.py  preprocesamiento.py  prueba.ipynb  quijote_ir.py  search_engine.py  settings.toml
p4/El_ingenioso_hidalgo_don_Quijote_de_la_Mancha/: 2000-h.htm
p4/app/: config.py  semantic_search.py  services.py
p4/app/rag/: context_builder.py  prompts.py  (+3 more)
p5/: README.md  pyproject.toml
p5/app/attention/: attention.py  multi_head.py  pseudo.txt
p5/app/inference/: __init__.py  inference.py
p5/app/tokenizer/: __init__.py
p5/app/train/: __init__.py  hiperparam_train.py  train.py
p5/artifacts/: best_model.pt  last_model.pt  train_config.txt
p5/artifacts/best/: best_model.pt  model.pt  results.txt
p5/artifacts/test_run/: best_model.pt  last_model.pt  tokenizer.json  train_config.txt
(+4 files in other folders)
