[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fdi-pln-2602-p5"
version = "1.0.0"
description = "Mini LLM desde cero para la práctica 5 de PLN"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "torch>=2.11.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[tool.setuptools]
include-package-data = true
packages = ["app", "app.attention", "app.inference", "app.model", "app.tokenizer", "app.train"]
